--- a/amitco/amitco.ioc
+++ b/amitco/amitco.ioc
@@ -8,11 +8,18 @@ Mcu.CPN=STM32G484VEH6
 Mcu.Family=STM32G4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IPNb=2
+Mcu.IP2=SYS
+Mcu.IP3=TIM2
+Mcu.IPNb=4
 Mcu.Name=STM32G484VEHx
 Mcu.Package=TFBGA100
-Mcu.Pin0=PA1
-Mcu.PinsNb=1
+Mcu.Pin0=PA14
+Mcu.Pin1=PA13
+Mcu.Pin2=PA1
+Mcu.Pin3=VP_SYS_VS_Systick
+Mcu.Pin4=VP_SYS_VS_DBSignals
+Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G484VEHx
@@ -30,7 +37,11 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Locked=true
-PA1.Signal=GPIO_Output
+PA1.Signal=S_TIM2_CH2
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -63,7 +74,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB1TimFreq_Value=16000000
@@ -108,5 +119,18 @@ RCC.USART3Freq_Value=16000000
 RCC.USBFreq_Value=64000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.IPParameters=Channel-PWM Generation2 CH2,Prescaler,PeriodNoDither,PulseNoDither_2
+TIM2.PeriodNoDither=999
+TIM2.Prescaler=79
+TIM2.PulseNoDither_2=500
+VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
+VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 isbadioc=false
