works with continues DMA

--- a/amitco/amitco.ioc
+++ b/amitco/amitco.ioc
@@ -2,8 +2,9 @@
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC1.CommonPathInternal=null|null|null|null
 ADC1.ContinuousConvMode=DISABLE
+ADC1.DMAContinuousRequests=ENABLE
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIG_T3_TRGO
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ExternalTrigConv,ContinuousConvMode,CommonPathInternal
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ExternalTrigConv,ContinuousConvMode,DMAContinuousRequests,CommonPathInternal
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
@@ -12,8 +13,9 @@ ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC2.CommonPathInternal=null|null|null|null
 ADC2.ContinuousConvMode=DISABLE
+ADC2.DMAContinuousRequests=ENABLE
 ADC2.ExternalTrigConv=ADC_EXTERNALTRIG_T3_TRGO
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,ContinuousConvMode,CommonPathInternal
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,ContinuousConvMode,DMAContinuousRequests,CommonPathInternal
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
