--- a/amitco/amitco.ioc
+++ b/amitco/amitco.ioc
@@ -1,92 +1,31 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.CommonPathInternal=null|null|null|null
-ADC1.ContinuousConvMode=DISABLE
-ADC1.ExternalTrigConv=ADC_EXTERNALTRIG_T3_TRGO
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ExternalTrigConv,ContinuousConvMode,CommonPathInternal
-ADC1.NbrOfConversionFlag=1
-ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
-ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC2.CommonPathInternal=null|null|null|null
-ADC2.ContinuousConvMode=DISABLE
-ADC2.ExternalTrigConv=ADC_EXTERNALTRIG_T3_TRGO
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,ContinuousConvMode,CommonPathInternal
-ADC2.NbrOfConversionFlag=1
-ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.ADC1.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.1.EventEnable=DISABLE
-Dma.ADC1.1.Instance=DMA1_Channel3
-Dma.ADC1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.1.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.1.Mode=DMA_CIRCULAR
-Dma.ADC1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.1.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.ADC1.1.Priority=DMA_PRIORITY_HIGH
-Dma.ADC1.1.RequestNumber=1
-Dma.ADC1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.ADC1.1.SignalID=NONE
-Dma.ADC1.1.SyncEnable=DISABLE
-Dma.ADC1.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.ADC1.1.SyncRequestNumber=1
-Dma.ADC1.1.SyncSignalID=NONE
-Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC2.0.EventEnable=DISABLE
-Dma.ADC2.0.Instance=DMA1_Channel5
-Dma.ADC2.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.0.Mode=DMA_CIRCULAR
-Dma.ADC2.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC2.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC2.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.ADC2.0.Priority=DMA_PRIORITY_HIGH
-Dma.ADC2.0.RequestNumber=1
-Dma.ADC2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.ADC2.0.SignalID=NONE
-Dma.ADC2.0.SyncEnable=DISABLE
-Dma.ADC2.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.ADC2.0.SyncRequestNumber=1
-Dma.ADC2.0.SyncSignalID=NONE
-Dma.Request0=ADC2
-Dma.Request1=ADC1
-Dma.RequestsNb=2
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32G484VEH6
 Mcu.Family=STM32G4
-Mcu.IP0=ADC1
-Mcu.IP1=ADC2
-Mcu.IP2=DMA
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM3
-Mcu.IPNb=7
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SYS
+Mcu.IP3=TIM2
+Mcu.IPNb=4
 Mcu.Name=STM32G484VEHx
 Mcu.Package=TFBGA100
-Mcu.Pin0=PA1
-Mcu.Pin1=PA2
-Mcu.Pin2=PC4
+Mcu.Pin0=PD4
+Mcu.Pin1=PA15
+Mcu.Pin2=PA1
 Mcu.Pin3=VP_SYS_VS_Systick
 Mcu.Pin4=VP_SYS_VS_DBSignals
-Mcu.Pin5=VP_TIM3_VS_ClockSourceINT
-Mcu.PinsNb=6
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G484VEHx
 MxCube.Version=6.12.1
 MxDb.Version=DB.6.0.121
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -99,10 +38,9 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Locked=true
 PA1.Signal=GPIO_Output
-PA2.Mode=IN3-Single-Ended
-PA2.Signal=ADC1_IN3
-PC4.Mode=IN5-Single-Ended
-PC4.Signal=ADC2_IN5
+PA15.Signal=S_TIM2_CH1
+PD4.Locked=true
+PD4.Signal=S_TIM2_CH2
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -135,7 +73,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -185,15 +123,18 @@ RCC.USART3Freq_Value=170000000
 RCC.USBFreq_Value=170000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=340000000
-TIM3.IPParameters=Prescaler,PeriodNoDither,TIM_MasterOutputTrigger
-TIM3.PeriodNoDither=99
-TIM3.Prescaler=169
-TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+SH.S_TIM2_CH1.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=EncoderMode,PeriodNoDither,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
+TIM2.PeriodNoDither=4294967295
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
+TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 isbadioc=false
