--- a/amitco/amitco.ioc
+++ b/amitco/amitco.ioc
@@ -9,13 +9,19 @@ Mcu.Family=STM32G4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP3=TIM1
+Mcu.IP4=TIM2
+Mcu.IPNb=5
 Mcu.Name=STM32G484VEHx
 Mcu.Package=TFBGA100
 Mcu.Pin0=PA1
 Mcu.Pin1=VP_SYS_VS_Systick
 Mcu.Pin2=VP_SYS_VS_DBSignals
-Mcu.PinsNb=3
+Mcu.Pin3=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin4=VP_TIM2_VS_ControllerModeTrigger
+Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin6=VP_TIM2_VS_ClockSourceITR
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G484VEHx
@@ -66,7 +72,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -116,9 +122,24 @@ RCC.USART3Freq_Value=170000000
 RCC.USBFreq_Value=170000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=340000000
+TIM1.IPParameters=PeriodNoDither,Prescaler,TIM_MasterOutputTrigger
+TIM1.PeriodNoDither=999
+TIM1.Prescaler=169
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM2.IPParameters=PeriodNoDither,Prescaler
+TIM2.PeriodNoDither=999999
+TIM2.Prescaler=169
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
+VP_TIM2_VS_ControllerModeTrigger.Mode=Trigger Mode
+VP_TIM2_VS_ControllerModeTrigger.Signal=TIM2_VS_ControllerModeTrigger
 board=custom
 isbadioc=false
