--- a/amitco/amitco.ioc
+++ b/amitco/amitco.ioc
@@ -9,13 +9,17 @@ Mcu.Family=STM32G4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP3=TIM1
+Mcu.IPNb=4
 Mcu.Name=STM32G484VEHx
 Mcu.Package=TFBGA100
-Mcu.Pin0=PA1
-Mcu.Pin1=VP_SYS_VS_Systick
-Mcu.Pin2=VP_SYS_VS_DBSignals
-Mcu.PinsNb=3
+Mcu.Pin0=PA11
+Mcu.Pin1=PA8
+Mcu.Pin2=PA1
+Mcu.Pin3=VP_SYS_VS_Systick
+Mcu.Pin4=VP_SYS_VS_DBSignals
+Mcu.Pin5=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G484VEHx
@@ -34,6 +38,9 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA11.Mode=PWM Generation1 CH1 CH1N
+PA11.Signal=TIM1_CH1N
+PA8.Signal=S_TIM1_CH1
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -66,7 +73,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -116,9 +123,22 @@ RCC.USART3Freq_Value=170000000
 RCC.USBFreq_Value=170000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=340000000
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
+SH.S_TIM1_CH1.ConfNb=1
+TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_ENABLE
+TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
+TIM1.DeadTime=100
+TIM1.IPParameters=PeriodNoDither,Prescaler,Channel-PWM Generation1 CH1 CH1N,DeadTime,PulseNoDither_1,AutomaticOutput,OffStateRunMode,OffStateIDLEMode
+TIM1.OffStateIDLEMode=TIM_OSSI_ENABLE
+TIM1.OffStateRunMode=TIM_OSSR_ENABLE
+TIM1.PeriodNoDither=999
+TIM1.Prescaler=169
+TIM1.PulseNoDither_1=500
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
 isbadioc=false
